[package]
name = "quartet"
description = "Nibble (quartet, u4) slices"
version = "0.1.0"
authors = ["Cody P Schafer <dev@codyps.com>"]
edition = "2018"
license = "GPL-3.0-or-later WITH GCC-exception-2.0"
repository = "https://github.com/jmesmon/quartet"
documentation = "https://docs.rs/quartet"
include = ["Cargo.toml", "src/**/*.rs", "README.md"]

[dependencies]
